Fixed z-index in cookie consent container

--- a/src/components/cookieConsent/cookieConsent.module.scss
+++ b/src/components/cookieConsent/cookieConsent.module.scss
@@ -12,7 +12,7 @@
   box-shadow: 3px 3px 0 0 #FFC857;
   background-color: $color-dark-2;
   color: $color-bright-1;
-  z-index: 4;
+  z-index: 5;
 
   strong {
     color: $color-bright-2;
